--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/7d43f0b2b4.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Padaria e Pizaria Primos</title>
 </head>
 <body>
     <header class="container"><!--heder-->
-        <div class="logo"></div><!--logo-->
-        <div class="menu">
-            <ul>
-                <li>Sobre</li>
-                <li>Promoção</li>
-                <li>Contato</li>
-            </ul>
-        </div><!--menu teste-->
+        <i class="fa-brands fa-whatsapp">99999999</i>
+        <br/>
+        <i class="fa-brands fa-instagram"></i>
+        <div class="flex">
+            <div class="logo"></div><!--logo-->
+        </div>
     </header>
+    <section class="nossos-preços">
+        
+    </section><!--nossos-preços-->
+    
 </body>
 </html>
