começo da sessão

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <div class="flex">
             <div class="logo"></div><!--logo-->
         </div>
+        <div class="clear"></div>
     </header>
     <section class="nossos-preços">
-        
+        <h2>Confira nossos preços</h2>
     </section><!--nossos-preços-->
     
 </body>
