sessão preços, por enquanto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Padaria e Pizaria Primos</title>
 </head>
 <body>
-    <header class="container"><!--heder-->
+    <header class="container"><!--header-->
         <i class="fa-brands fa-whatsapp">99999999</i>
         <br/>
         <i class="fa-brands fa-instagram"></i>
@@ -20,8 +20,28 @@
         </div>
         <div class="clear"></div>
     </header>
-    <section class="nossos-preços">
-        <h2>Confira nossos preços</h2>
+    <section class="nossos-precos">
+        <div class="flex">
+            <h2>Confira nossos preços</h2>
+        </div><!--titulo-->
+        <div class="flex">
+            <i class="fa-solid fa-arrow-down"></i>  
+        </div>
+        <div class="produtos    ">
+            <div class="img"></div><!--img-->
+            <div class="precos">
+                <p>Ex minim eu elit velit ullamco cupidatat ullamco qui culpa id nulla quis.</p>
+                <span>9,99R$</span>
+            </div><!--preços-->
+        </div><!--produtos-->
+        
+        <div class="produtos">
+            <div class="img" style="order: 2;"></div><!--img-->
+            <div class="precos" style="order: 1;" >
+                <p>Ex minim eu elit velit ullamco cupidatat ullamco qui culpa id nulla quis.</p>
+                <span>9,99R$</span>
+            </div><!--preços-->
+        </div><!--produtos-->
     </section><!--nossos-preços-->
     
 </body>
