--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 </head>
 <body>
     <header class="container"><!--header-->
-        <i class="fa-brands fa-whatsapp">99999999</i>
+        <i class="fa-brands fa-whatsapp"><spam>99999999</spam></i>
         <br/>
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"><spam>@padaria.primos</spam></i>
         <div class="flex">
             <div class="logo"></div><!--logo-->
         </div>
         <div class="clear"></div>
     </header>
+    
     <section class="nossos-precos">
         <div class="flex">
             <h2>Confira nossos preços</h2>
@@ -27,7 +28,7 @@
         <div class="flex">
             <i class="fa-solid fa-arrow-down"></i>  
         </div>
-        <div class="produtos    ">
+        <div class="produtos">
             <div class="img"></div><!--img-->
             <div class="precos">
                 <p>Ex minim eu elit velit ullamco cupidatat ullamco qui culpa id nulla quis.</p>
@@ -43,6 +44,27 @@
             </div><!--preços-->
         </div><!--produtos-->
     </section><!--nossos-preços-->
+
+    <section class="promocao">
+        <div class="flex">
+            <h2>veja nossas promoçoes</h2>
+        </div>
+        <div class="nav-galeria">
+            <div class="mini-img-wraper"></div>
+            <div class="mini-img-wraper"></div>
+            <div class="mini-img-wraper"></div>
+            <div class="mini-img-wraper"></div>
+        </div><!--nav-galeria-->
+        <div class="clear"></div>
+    </section><!--promoção-->
+
+    <section class="contato">
+        <div class="back">
+            <p>entre em contato pelo whatsapp</p>
+            <br/>
+            <i class="fa-brands fa-whatsapp"><spam>99999999</spam></i>
+        </div>
+    </section><!--contato-->
     
 </body>
 </html>
